js/src/jit-test/tests/binast/invalid/function-decl-in-then.binjs
BINJS
[
GRAMMAR
]
identity
;
AssertedParameterScope
AssertedVarScope
"
BindingIdentifier0EagerFunctionDeclaration
FormalParameters0FunctionOrMethodContents
AssertedBlockScope
(
AssertedDeclaredName2AssertedScriptGlobalScope
Block
IfStatement0LiteralNumericExpression
Script
[
STRINGS
]
identity
;
f
var
[
TREE
]
identity
;
?
